# questix

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  Makefile  README.md
.github/: copilot-instructions.md
.github/workflows/: ansible-check.yaml  build-iso.yml  ros2-build-test.yaml  semantic-pull_request.yaml
ansible/: setup.sh
ansible/playbooks/: README.md  setup_dev.yaml  setup_kit.yaml
ansible/playbooks/vars/: README.md  dev.yaml  setup_kit_vars.yaml
ansible/roles/: README.md
description_launch/: CMakeLists.txt  package.xml
description_launch/config/: description.rviz
description_launch/launch/: description_launch.launch.xml
description_launch/urdf/: questix.xacro
esc_motor_control_cpp/: CMakeLists.txt  package.xml
esc_motor_control_cpp/config/: esc_motor_control_cpp.dualshock.yaml  esc_motor_control_cpp.uart.yaml  esc_motor_control_cpp.yaml
esc_motor_control_cpp/include/esc_motor_control_cpp/: esc_motor_control_component.hpp  pwm_backend.hpp
esc_motor_control_cpp/launch/: esc_motor_control_cpp.launch.xml
esc_motor_control_cpp/src/: esc_motor_control_component.cpp  esc_motor_control_node.cpp
esc_motor_control_python/: CHANGELOG.rst  README.md
gpio_reader/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
gpio_reader/config/: gpio_reader.yaml
gpio_reader/launch/: gpio_reader.launch.py  gpio_reader.launch.xml  gpio_reader_component.launch.py  gpio_reader_component.launch.xml
gpio_reader/src/: gpio_reader_component.cpp  gpio_reader_node.cpp
joy_controller/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
joy_controller/config/: joy_controller_params.yaml  joy_node_params.yaml
joy_controller/launch/: joy_controller.launch.py  joy_controller.launch.xml  joy_controller_referee.launch.xml
joy_controller/src/: joy_controller_component.cpp  joy_controller_dual_stick_component.cpp  joy_controller_dual_stick_node.cpp  joy_controller_node.cpp
joy_gate/: CHANGELOG.rst  CMakeLists.txt  package.xml
joy_gate/config/: joy_gate.yaml
joy_gate/launch/: joy_gate.launch.xml
joy_gate/src/: joy_gate_component.cpp  joy_gate_node.cpp
launcher/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
launcher/launch/: drive_component.launch.xml  lidar_driver.launch.xml  questix_core.launch.xml  shot_component.launch.xml
motor_control_app/: CHANGELOG.rst  CMakeLists.txt
motor_control_app/config/: drive_component.yaml  shot_config.dualshock.yaml  shot_config.uart.yaml  shot_config.yaml  single_ddt_motor_config.yaml
motor_control_app/launch/: drive_component.launch.py  drive_component_container.launch.py  joy_axis_drive.launch.py  shot_component.launch.py  shot_component.launch.xml  single_ddt_motor.launch.py
motor_control_app/src/: drive_component.cpp  drive_component_node.cpp  joy_axis_drive_component.cpp  joy_axis_drive_node.cpp  shot_component.cpp  shot_component_node.cpp  simple_motor_app.cpp  simple_test_node.cpp  single_ddt_motor_component.cpp  single_ddt_motor_node.cpp  unified_motor_app.cpp  unified_motor_control_node.cpp
motor_control_lib/: CHANGELOG.rst  CMakeLists.txt  README.md
motor_control_lib/src/: ddt_motor_lib.cpp  differential_drive.cpp  motor_manager.cpp  servo_control.cpp  servo_control_node.cpp  servo_test_node.cpp
motor_control_lib_simple/: CHANGELOG.rst
operation_manager/: CHANGELOG.rst  package.xml
scripts/: apply-ansible-config.sh  configure-display.sh  install-robot-manager.sh  setup.py
scripts/robot_manager/: __main__.py  app.py
systemd/: 50-questix-robot.pkla  50-questix-robot.rules  questix_robot.env  questix_robot.service  questix_robot_launcher.sh  questix_robot_manager.service
uart_joy_driver/: CMakeLists.txt  package.xml
uart_joy_driver/config/: uart_joy_driver_params.yaml
uart_joy_driver/include/uart_joy_driver/: uart_joy_driver_component.hpp
uart_joy_driver/launch/: uart_joy_driver.launch.xml
uart_joy_driver/src/: uart_joy_driver_component.cpp  uart_joy_driver_node.cpp
(+53 files in other folders)
